# whereishorse

./: README.md  pyproject.toml  whereishorse.py
resources/: com.whereishorse.agent.plist  config.yaml
